# matminer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  circle.yml  data.py  plots.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements-optional.txt  requirements-optional.yaml  requirements.txt  requirements.yaml  requirements_MPDS.txt  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: full_test.yml  lint.yml  release-test.yml  release.yml  test.yml  upgrade-dependencies.yml
dev_scripts/: check_pylint.py  run_circleci_tests.sh
dev_scripts/dataset_management/: .dataset_data_backup.json  generate_datasets.py  how_to_add_new_datasets.md  modify_dataset_metadata.py  prep_dataset_for_figshare.py  refind2matminer.py
docs/: Makefile  README.rst  changelog.html  conf.py  contributors.html  dataset_addition_guide.html  dataset_summary.html  example_bulkmod.html  featurizer_summary.html  genindex.html  index.html  index.rst  installation.html  matminer.data_retrieval.html  matminer.data_retrieval.rst  matminer.data_retrieval.tests.html  matminer.datasets.html  matminer.datasets.test_datasets.html  matminer.datasets.tests.html  matminer.descriptors.html  matminer.descriptors.rst  matminer.distance_metrics.html  matminer.featurizers.composition.html  matminer.featurizers.composition.tests.html  matminer.featurizers.data_files.html  matminer.featurizers.html  matminer.featurizers.site.html  matminer.featurizers.site.tests.html  matminer.featurizers.structure.html  matminer.featurizers.structure.tests.html  matminer.featurizers.tests.html  matminer.featurizers.utils.html  matminer.featurizers.utils.tests.html  matminer.figrecipes.html  matminer.figrecipes.matplotlib.examples.html  matminer.figrecipes.matplotlib.examples.rst  matminer.figrecipes.matplotlib.html  matminer.figrecipes.matplotlib.rst  matminer.figrecipes.plotly.html  matminer.figrecipes.plotly.rst  (+19 more)
docs/_sources/: changelog.rst.txt  contributions.rst.txt  contributors.rst.txt  dataset_addition_guide.rst.txt  dataset_summary.rst.txt  example_bulkmod.rst.txt  featurizer_summary.rst.txt  index.rst.txt  installation.rst.txt  matminer.data_retrieval.rst.txt  matminer.data_retrieval.tests.rst.txt  matminer.datasets.rst.txt  matminer.datasets.test_datasets.rst.txt  matminer.datasets.tests.rst.txt  matminer.featurizers.composition.rst.txt  matminer.featurizers.data_files.rst.txt  matminer.featurizers.rst.txt  matminer.featurizers.site.rst.txt  matminer.featurizers.structure.rst.txt  matminer.featurizers.structure.tests.rst.txt  matminer.featurizers.tests.rst.txt  matminer.featurizers.utils.rst.txt  matminer.featurizers.utils.tests.rst.txt  matminer.figrecipes.matplotlib.examples.rst.txt  matminer.figrecipes.rst.txt  matminer.figrecipes.tests.rst.txt  matminer.learners.rst.txt  matminer.rst.txt  matminer.utils.data_files.rst.txt  matminer.utils.rst.txt  matminer.utils.tests.rst.txt
docs/_static/: basic.css  documentation_options.js  nature.css
docs_rst/: Makefile  changelog.rst  conf.py  contributors.rst  dataset_addition_guide.rst  dataset_summary.py  dataset_summary.rst  example_bulkmod.rst  featurizer_summary.py  featurizer_summary.rst  index.rst  installation.rst  matminer.data_retrieval.rst  matminer.data_retrieval.tests.rst  matminer.datasets.rst  matminer.datasets.test_datasets.rst  matminer.datasets.tests.rst  matminer.distance_metrics.rst  matminer.featurizers.composition.tests.rst  matminer.featurizers.data_files.rst  matminer.featurizers.rst  matminer.featurizers.site.rst  matminer.featurizers.site.tests.rst  matminer.featurizers.structure.rst  matminer.featurizers.tests.rst  matminer.featurizers.utils.rst  matminer.featurizers.utils.tests.rst  matminer.figrecipes.matplotlib.examples.rst  matminer.figrecipes.matplotlib.rst  matminer.figrecipes.plotly.rst  matminer.figrecipes.rst  matminer.figrecipes.tests.rst  matminer.learners.tests.rst  matminer.models.rst  matminer.rst  matminer.utils.data_files.rst  matminer.utils.rst  matminer.utils.tests.rst
docs_rst/_static/: bulk_shear_moduli.html  nature.css
docs_rst/_templates/: layout.html
example_notebooks/: MPDS_UO_bondlengths.ipynb  experiment_vs_computed_bandgap.ipynb  get_Citrine_experimental_bandgaps_PbTe.ipynb  kernel_ridge_SCM_OFM.py  machine_learning-oqmd_formation_enthalpy.ipynb  machine_learning_to_predict_bandgap.ipynb
matminer/: ElM2D_.py  __init__.py  catalog.yaml  decorate.py  decorator.py  pyCookieCheat.py  utils.py
matminer/data_retrieval/: CifFile  from_Citrine.py  from_Citrine_PropertiesInRows.py  from_MP.py  mp.py  retrieve_AFLOW.py  retrieve_Citrine.py  retrieve_MDF.py  retrieve_MP.py  retrieve_MPDS.py  retrieve_MongoDB.py  retrieve_Springer.py  retrieve_base.py
matminer/datasets/: __init__.py  convenience_loaders.py  dataframe_loader.py  dataset_metadata.json  dataset_retrieval.py  diel_ref.csv  dielectric_constant.csv  ec.csv  piezo.csv  piezoelectric_tensor.csv  utils.py
matminer/descriptors/: .composition_features.py.swp  .composition_features_2.py.swp  __init__.py  add_descriptors.py  bandstructure.py  bandstructure_features.py  base.py  base_classes.py  cohesive_energies.json  composition.py  (+9 more)
matplotlib/: plots.py
plotly/: make_plots.py
requirements/: macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
(+1192 files in other folders)
