
[build-system]
requires = ["setuptools>=80.0.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "docs", "docs_rst", "dev_scripts"]
include = ["matminer*"]

[project]
name = "matminer"
description = "matminer is a library that contains tools for data mining in Materials Science"
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["data mining", "materials science", "scientific tools"]
authors = [
    { name = "Anubhav Jain", email = "anubhavster@gmail.com" }
]
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23",
  "requests~=2.31",
  "pandas>=1.5, <3",
  "tqdm~=4.66",
  "pymongo~=4.5",
  "scikit-learn~=1.3",
  "sympy~=1.11",
  "monty>=2023",
  "pymatgen>=2023",
  "scipy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/hackingmaterials/matminer"
Documentation = "https://hackingmaterials.lbl.gov/matminer/"

[project.optional-dependencies]
mpds = ["ujson", "jmespath", "httplib2", "ase", "jsonschema"]
dscribe = ["dscribe~=2.1"]
mdfforge = ["mdf-forge"]
aflow = ["aflow"]
citrine = ["citrination-client"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "coverage",
    "coveralls",
    "flake8",
    "black",
    "pylint",
    "sphinx"
]
tests = ["matminer[mpds,describe,mdfforge,aflow,citrine,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
